# RandomOpenGLRenderer

./: .gitmodules  App  CMakeLists.txt  README.md  amongus.txt  build.sh  indexbuffer.cpp  indexbuffer.h  main.c  main.cpp  plans.txt  reader.c  reader.h  renderer.cpp  renderer.h  run.sh  shaders.cpp  shaders.h  texture.cpp  texture.h  vertShader.glsl  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
SEGGS/: CMakeLists.txt  biden.c  biden.h  obama.c  obama.h
Shaders/: fragShader.glsl  vertShader.glsl
XWIN16/: CMakeLists.txt  file.c  file.h  window.c  window.h
